--- a/app/src/main/res/layout/activity_arview_screen.xml
+++ b/app/src/main/res/layout/activity_arview_screen.xml
@@ -6,15 +6,27 @@
     android:layout_height="match_parent"
     tools:context=".ARViewScreen">
 
-
     <VideoView
         android:id="@+id/videoView3"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:onClick="clickOnVideo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:onClick="clickOnVideo"/>
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/imageButton1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
+        android:contentDescription="@string/ar_button"
+        android:onClick="clickOnVideo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ar_button" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
