--- a/app/src/main/res/layout/activity_menu_screen.xml
+++ b/app/src/main/res/layout/activity_menu_screen.xml
@@ -23,7 +23,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
-        android:id="@+id/menu_list_view"
+        android:id="@+id/friend_list_view"
         android:layout_width="379dp"
         android:layout_height="638dp"
         android:layout_marginLeft="16dp"
