--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,8 @@
         android:layout_marginRight="16dp"
         android:layout_marginBottom="32dp"
         android:onClick="startMenuActivity"
+        android:textColor="#000000"
+        android:background="@drawable/rounded_button_yellow"
         android:text="@string/log_in_button"
         app:layout_constraintBottom_toTopOf="@+id/signup_button"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,7 +48,9 @@
         android:layout_marginRight="16dp"
         android:layout_marginBottom="32dp"
         android:onClick="startMenuActivity"
+        android:textColor="#000000"
         android:text="@string/sign_up_button"
+        android:background="@drawable/rounded_button_yellow"
         app:layout_constraintBottom_toTopOf="@+id/guest_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -61,6 +65,8 @@
         android:layout_marginRight="16dp"
         android:layout_marginBottom="40dp"
         android:onClick="startMenuActivity"
+        android:textColor="#000000"
+        android:background="@drawable/rounded_button_yellow"
         android:text="@string/guest_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
