--- a/app/src/main/res/layout/activity_photo_view_screen.xml
+++ b/app/src/main/res/layout/activity_photo_view_screen.xml
@@ -11,6 +11,7 @@
         android:layout_width="71dp"
         android:layout_height="48dp"
         android:layout_marginStart="16dp"
+        android:background="@drawable/rounded_button_yellow"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="32dp"
         android:onClick="startBack"
@@ -42,6 +43,8 @@
         android:layout_marginBottom="32dp"
         android:onClick="startChallengeView"
         android:text="@string/challenge_button"
+        android:background="@drawable/rounded_button_blue"
+        android:textColor="#ffe699"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
