--- a/app/src/main/res/layout/activity_tour_mode_screen.xml
+++ b/app/src/main/res/layout/activity_tour_mode_screen.xml
@@ -15,6 +15,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="32dp"
         android:onClick="startBack"
+        android:background="@drawable/rounded_button_yellow"
         android:text="@string/back_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -40,21 +41,25 @@
         android:layout_marginBottom="16dp"
         android:contentDescription="@string/ar_button"
         android:onClick="startARview"
+        android:background="@drawable/rounded_button_yellow"
+        android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/ar_button" />
 
     <TextView
         android:id="@+id/username_label6"
-        android:layout_width="273dp"
-        android:layout_height="48dp"
+        android:layout_width="256dp"
+        android:layout_height="45dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
+        android:background="@drawable/rounded_button_yellow"
         android:gravity="center"
         android:text="@string/tour_mode_label"
+        android:textColor="#000"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button11"
