--- a/app/src/main/res/layout/activity_arview_screen.xml
+++ b/app/src/main/res/layout/activity_arview_screen.xml
@@ -15,6 +15,7 @@
         android:layout_marginTop="32dp"
         android:onClick="startBack"
         android:text="@string/back_button"
+        android:background="@drawable/rounded_button_yellow"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -37,6 +38,8 @@
         android:layout_marginBottom="16dp"
         android:contentDescription="@string/ar_button"
         android:onClick="clickOnVideo"
+        android:background="@drawable/rounded_button_yellow"
+        android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/ar_button" />
