--- a/app/src/main/res/layout/activity_challenges_screen.xml
+++ b/app/src/main/res/layout/activity_challenges_screen.xml
@@ -15,8 +15,10 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
+        android:background="@drawable/rounded_button_yellow"
         android:gravity="center"
         android:text="@string/challenges_label"
+        android:textColor="#000000"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button8"
@@ -26,11 +28,13 @@
         android:id="@+id/button8"
         android:layout_width="71dp"
         android:layout_height="48dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="0dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="32dp"
+        android:background="#00000000"
         android:onClick="startBack"
         android:text="@string/back_button"
+        android:textColor="#000000"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
