--- a/app/src/main/res/layout/activity_group_screen.xml
+++ b/app/src/main/res/layout/activity_group_screen.xml
@@ -12,6 +12,7 @@
         android:layout_height="48dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
+        android:background="#00000000"
         android:layout_marginTop="32dp"
         android:onClick="startBack"
         android:text="@string/back_button"
@@ -30,6 +31,8 @@
         android:gravity="center"
         android:text="@string/group_label"
         android:textSize="30sp"
+        android:textColor="#000"
+        android:background="@drawable/rounded_button_yellow"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button14"
         app:layout_constraintTop_toTopOf="parent" />
@@ -46,6 +49,7 @@
         android:gravity="center"
         android:text="@string/my_groups"
         android:textSize="30sp"
+        android:textColor="#000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -66,6 +70,8 @@
         android:text="@string/edit_field_groups"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:background="@drawable/rounded_edittext"
+        android:padding="10dp"
         app:layout_constraintTop_toBottomOf="@+id/username_label3" />
 
     <ListView
@@ -93,6 +99,8 @@
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:text="@string/join_button"
+        android:background="@drawable/rounded_button_blue"
+        android:textColor="#ffe699"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/button6"
         app:layout_constraintStart_toStartOf="parent"
@@ -109,6 +117,8 @@
         android:layout_marginRight="16dp"
         android:text="@string/create_button"
         android:textSize="18sp"
+        android:background="@drawable/rounded_button_blue"
+        android:textColor="#ffe699"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button5"
         app:layout_constraintTop_toBottomOf="@+id/simpleEditText" />
