--- a/app/src/main/res/layout/activity_profile_screen.xml
+++ b/app/src/main/res/layout/activity_profile_screen.xml
@@ -12,6 +12,7 @@
         android:layout_height="48dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
+        android:background="#00000000"
         android:layout_marginTop="32dp"
         android:onClick="startBack"
         android:text="@string/back_button"
@@ -43,6 +44,8 @@
         android:gravity="center"
         android:text="@string/profile_label"
         android:textSize="30sp"
+        android:textColor="#000"
+        android:background="@drawable/rounded_button_yellow"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button15"
         app:layout_constraintTop_toTopOf="parent" />
@@ -72,6 +75,8 @@
         android:layout_marginBottom="24dp"
         android:clickable="false"
         android:text="@string/points_button"
+        android:background="@drawable/rounded_button_blue"
+        android:textColor="#ffe699"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/button3"
         app:layout_constraintStart_toStartOf="parent" />
@@ -86,6 +91,8 @@
         android:clickable="false"
         android:text="@string/challenges_button"
         android:textSize="18sp"
+        android:background="@drawable/rounded_button_blue"
+        android:textColor="#ffe699"
         app:layout_constraintBottom_toTopOf="@+id/button4"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -99,6 +106,8 @@
         android:clickable="false"
         android:text="@string/friends_button"
         android:textSize="18sp"
+        android:background="@drawable/rounded_button_blue"
+        android:textColor="#ffe699"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -113,6 +122,7 @@
         android:text="@string/points_number_text"
         android:textColor="#000000"
         android:textSize="36sp"
+        android:background="@drawable/rounded_textview_yellow"
         app:layout_constraintBottom_toTopOf="@+id/textView4"
         app:layout_constraintStart_toEndOf="@+id/button" />
 
@@ -127,6 +137,7 @@
         android:text="@string/challenges_number_text"
         android:textColor="#000000"
         android:textSize="36sp"
+        android:background="@drawable/rounded_textview_yellow"
         app:layout_constraintBottom_toTopOf="@+id/textView5"
         app:layout_constraintStart_toEndOf="@+id/button3" />
 
@@ -141,6 +152,7 @@
         android:text="@string/friends_number_text"
         android:textColor="#000000"
         android:textSize="36sp"
+        android:background="@drawable/rounded_textview_yellow"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button4" />
 
