Added design to freinds screen

--- a/app/src/main/res/layout/activity_friends_screen.xml
+++ b/app/src/main/res/layout/activity_friends_screen.xml
@@ -6,32 +6,44 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ListView
-        android:id="@+id/friend_list_view"
-        android:layout_width="384dp"
-        android:layout_height="545dp"
+    <Button
+        android:id="@+id/button11"
+        android:layout_width="71dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.592"
+        android:layout_marginTop="32dp"
+        android:onClick="startBack"
+        android:background="#00000000"
+        android:text="@string/back_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ListView
+        android:id="@+id/friend_list_view"
+        android:layout_width="379dp"
+        android:layout_height="638dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginRight="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/friends_header" />
+
     <TextView
         android:id="@+id/friends_header"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_width="263dp"
+        android:layout_height="40dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:gravity="center"
         android:text="@string/friends_header"
         android:textSize="30sp"
+        android:background="@drawable/rounded_button_yellow"
+        android:textColor="#000"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/button11"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
